ghc-4335c07/testsuite/tests/indexed-types/should_fail/T3440.stderr

T3440.hs:11:22: error:
    • Could not deduce: a1 ~ a
      from the context: Fam a ~ Fam a1
        bound by a pattern with constructor:
                   GADT :: forall a. a -> Fam a -> GADT (Fam a),
                 in an equation for ‘unwrap’
        at T3440.hs:11:9-16
      ‘a1’ is a rigid type variable bound by
        a pattern with constructor:
          GADT :: forall a. a -> Fam a -> GADT (Fam a),
        in an equation for ‘unwrap’
        at T3440.hs:11:9-16
      ‘a’ is a rigid type variable bound by
        the type signature for:
          unwrap :: forall a. GADT (Fam a) -> (a, Fam a)
        at T3440.hs:10:1-36
    • In the expression: x
      In the expression: (x, y)
      In an equation for ‘unwrap’: unwrap (GADT x y) = (x, y)
    • Relevant bindings include
        y :: Fam a1 (bound at T3440.hs:11:16)
        x :: a1 (bound at T3440.hs:11:14)
        unwrap :: GADT (Fam a) -> (a, Fam a) (bound at T3440.hs:11:1)
